--- a/index.html
+++ b/index.html
@@ -69,22 +69,21 @@
          <div class="carousel-item active" >
             <!--video class="vif video-fluid" autoplay loop muted>
                <source src="assets/img/backgroundvid.mp4" type="video/mp4">
-            </video-->
+               </video-->
             <!--div class="container">
                <div class="overlay carausel-caption font-weight-bold text-warning">
                   <h2>Building Infrastructure for Better Tomorrow</h2>
                   <a href="#about" class="btn-get-started scrollto">Read More</a>
                </div>
-            </div-->
-
+               </div-->
             <!-- Slide 2 -->
             <div class="carousel-item" style="background-image: url(assets/img/bg.png)">
                <div class="container">
                   <h2>Building Infrastructure for Better Tomorrow</h2>
                   <!--p>Ut velit est quam dolor ad a aliquid qui aliquid. Sequi ea ut et est quaerat sequi nihil ut aliquam. Occaecati alias dolorem mollitia ut. Similique ea voluptatem. Esse doloremque accusamus repellendus deleniti vel.</p>
-                  <a href="#about" class="btn-get-started scrollto">Read More</a-->
+                     <a href="#about" class="btn-get-started scrollto">Read More</a-->
                </div>
-               </div>
+            </div>
          </div>
       </section>
       <!-- End Hero -->
@@ -345,7 +344,7 @@
                            <p class="jj">Design and construction of 51 mtr span steel Decked Foot bridge over Anji Nallah at Sukhal Ghati including approach path on both sides in Reasi District.
                            </p>
                         </div>
-                     </div-->
+                        </div-->
                      <!-- End testimonial item -->
                   </div>
                   <div class="swiper-pagination"></div>
@@ -389,8 +388,107 @@
             </div>
          </section>
          <!-- End Counts Section -->
+         <!-- ======= logo new Section ======= -->
+         <section id="counts" class="counts">
+            <div class="container" data-aos="fade-up">
+               <div class="row no-gutters">
+                  <div class="col-lg-2 col-md-6 d-md-flex align-items-md-stretch">
+                     <div class="count-boxi">
+                        <div class="icon-box" data-aos="zoom-in" data-aos-delay="200">
+                           <img src="assets/img/client logo/Konkan rail.png" class="img-fluid" alt="">
+                        </div>
+                     </div>
+                  </div>
+                  <div class="col-lg-2 col-md-6 d-md-flex align-items-md-stretch">
+                     <div class="count-boxi">
+                        <div class="icon-box" data-aos="zoom-in" data-aos-delay="200">
+                           <img src="assets/img/client logo/1519799094694.png" class="img-fluid" alt="">
+                        </div>
+                     </div>
+                  </div>
+                  <div class="col-lg-2 col-md-6 d-md-flex align-items-md-stretch">
+                     <div class="count-boxi">
+                        <div class="icon-box" data-aos="zoom-in" data-aos-delay="200">
+                           <img src="assets/img/client logo/BRO.png" class="img-fluid" alt="">
+                        </div>
+                     </div>
+                  </div>
+                  <div class="col-lg-2 col-md-6 d-md-flex align-items-md-stretch">
+                     <div class="count-boxi">
+                        <div class="icon-box" data-aos="zoom-in" data-aos-delay="200">
+                           <img src="assets/img/client logo/cvpp.png" class="img-fluid" alt="">
+                        </div>
+                     </div>
+                  </div>
+                  <div class="col-lg-2 col-md-6 d-md-flex align-items-md-stretch">
+                     <div class="count-boxi">
+                        <div class="icon-box" data-aos="zoom-in" data-aos-delay="200">
+                           <img src="assets/img/client logo/JKERA.jpg" class="img-fluid" alt="">
+                        </div>
+                     </div>
+                  </div>
+                  <div class="col-lg-2 col-md-6 d-md-flex align-items-md-stretch">
+                     <div class="count-boxi">
+                        <div class="icon-box" data-aos="zoom-in" data-aos-delay="200">
+                           <img src="assets/img/client logo/JKpcc.JPG" class="img-fluid" alt="">
+                        </div>
+                     </div>
+                  </div>
+                  <div class="col-lg-2 col-md-6 d-md-flex align-items-md-stretch">
+                     <div class="count-boxi">
+                        <div class="icon-box" data-aos="zoom-in" data-aos-delay="200">
+                           <img src="assets/img/client logo/JKSPDC.png" class="img-fluid" alt="">
+                        </div>
+                     </div>
+                  </div>
+                  <div class="col-lg-2 col-md-6 d-md-flex align-items-md-stretch">
+                     <div class="count-boxi">
+                        <div class="icon-box" data-aos="zoom-in" data-aos-delay="200">
+                           <img src="assets/img/client logo/NHAI-Logo-PNG.png" class="img-fluid" alt="">
+                        </div>
+                     </div>
+                  </div>
+                  <div class="col-lg-2 col-md-6 d-md-flex align-items-md-stretch">
+                     <div class="count-boxi">
+                        <div class="icon-box" data-aos="zoom-in" data-aos-delay="200">
+                           <img src="assets/img/client logo/NHIDCL_19875.jpg" class="img-fluid" alt="">
+                        </div>
+                     </div>
+                  </div>
+                  <div class="col-lg-2 col-md-6 d-md-flex align-items-md-stretch">
+                     <div class="count-boxi">
+                        <div class="icon-box" data-aos="zoom-in" data-aos-delay="200">
+                           <img src="assets/img/client logo/NHPC_Logo.png" class="img-fluid" alt="">
+                        </div>
+                     </div>
+                  </div>
+                  <div class="col-lg-2 col-md-6 d-md-flex align-items-md-stretch">
+                     <div class="count-boxi">
+                        <div class="icon-box" data-aos="zoom-in" data-aos-delay="200">
+                           <img src="assets/img/client logo/PMGSY.png" class="img-fluid" alt="">
+                        </div>
+                     </div>
+                  </div>
+                  <div class="col-lg-2 col-md-6 d-md-flex align-items-md-stretch">
+                     <div class="count-boxi">
+                        <div class="icon-box" data-aos="zoom-in" data-aos-delay="200">
+                           <img src="assets/img/client logo/PWD.png" class="img-fluid" alt="">
+                        </div>
+                     </div>
+                  </div>
+                  <div class="col-lg-2 col-md-6 d-md-flex align-items-md-stretch">
+                     <div class="count-boxi">
+                        <div class="icon-box" data-aos="zoom-in" data-aos-delay="200">
+                           <img src="assets/img/client logo/Morth.jpg" class="img-fluid" alt="">
+                        </div>
+                     </div>
+                  </div>
+               </div>
+            </div>
+         </section>
+         <!-- End Counts Section -->
          <!-- ======= Services Section ======= -->
-         <section id="services" class="services services">
+         <!--section id="services" class="services services">
             <div class="container" data-aos="fade-up">
                <div class="section-title">
                   <h2>Clients</h2>
@@ -398,48 +496,48 @@
                </div>
                <div class="row">
                   <div class="aa col-lg-2 col-md-6 col-sm-12 icon-box" data-aos="zoom-in" data-aos-delay="100">
-                     <!--div class="icon"><i class="fas fa-heartbeat"></i></div-->
-                     <div class="swiper-slide"><a class="gallery-lightbox" href="assets/img/client logo/BRO.png"><img src="assets/img/client logo/BRO.png" class="loggo img-fluid" alt=""></a></div>
-                  </div>
-                  <div class="aa col-lg-2 col-md-12 col-sm-12 icon-box" data-aos="zoom-in" data-aos-delay="200">
-                     <div class="swiper-slide"><a class="gallery-lightbox" href="assets/img/client logo/PWD.png"><img src="assets/img/client logo/PWD.png" class="loggo img-fluid" alt=""></a></div>
-                  </div>
-                  <div class="aa col-lg-2 col-md-12 col-sm-12 icon-box" data-aos="zoom-in" data-aos-delay="200">
-                     <div class="swiper-slide"><a class="gallery-lightbox" href="assets/img/client logo/1519799094694.png"><img src="assets/img/client logo/1519799094694.png" class="loggo img-fluid" alt=""></a></div>
-                  </div>
-                  <div class="aa col-lg-2 col-md-12 col-sm-12 icon-box" data-aos="zoom-in" data-aos-delay="200">
-                     <div class="swiper-slide"><a class="gallery-lightbox" href="assets/img/client logo/JKpcc.JPG"><img src="assets/img/client logo/JKpcc.JPG" class="loggo img-fluid" alt=""></a></div>
-                  </div>
-                  <div class="aa col-lg-2 col-md-12 col-sm-12 icon-box" data-aos="zoom-in" data-aos-delay="200">
-                     <div class="swiper-slide"><a class="gallery-lightbox" href="assets/img/client logo/JKSPDC.png"><img src="assets/img/client logo/JKSPDC.png" class="loggo img-fluid" alt=""></a></div>
-                  </div>
-                  <div class="aa col-lg-2 col-md-12 col-sm-12 icon-box" data-aos="zoom-in" data-aos-delay="200">
-                     <div class="swiper-slide"><a class="gallery-lightbox" href="assets/img/client logo/Konkan rail.png"><img src="assets/img/client logo/Konkan rail.png" class="loggo img-fluid" alt=""></a></div>
-                  </div>
-                  <div class="aa col-lg-2 col-md-12 col-sm-12 icon-box" data-aos="zoom-in" data-aos-delay="200">
-                     <div class="swiper-slide"><a class="gallery-lightbox" href="assets/img/client logo/Morth.jpg"><img src="assets/img/client logo/Morth.jpg" class="loggo img-fluid" alt=""></a></div>
-                  </div>
-                  <div class="aa col-lg-2 col-md-12 col-sm-12 icon-box" data-aos="zoom-in" data-aos-delay="200">
-                     <div class="swiper-slide"><a class="gallery-lightbox" href="assets/img/client logo/NHAI-Logo-PNG.png"><img src="assets/img/client logo/NHAI-Logo-PNG.png" class="loggo img-fluid" alt=""></a></div>
-                  </div>
-                  <div class="aa col-lg-2 col-md-12 col-sm-12 icon-box" data-aos="zoom-in" data-aos-delay="200">
-                     <div class="swiper-slide"><a class="gallery-lightbox" href="assets/img/client logo/NHIDCL_19875.jpg"><img src="assets/img/client logo/NHIDCL_19875.jpg" class="loggo img-fluid" alt=""></a></div>
-                  </div>
-                  <div class="aa col-lg-2 col-md-12 col-sm-12 icon-box" data-aos="zoom-in" data-aos-delay="200">
-                     <div class="swiper-slide"><a class="gallery-lightbox" href="assets/img/client logo/NHPC_Logo.png"><img src="assets/img/client logo/NHPC_Logo.png" class="loggo img-fluid" alt=""></a></div>
-                  </div>
-                  <div class="aa col-lg-2 col-md-12 col-sm-12 icon-box" data-aos="zoom-in" data-aos-delay="200">
-                     <div class="swiper-slide"><a class="gallery-lightbox" href="assets/img/client logo/PMGSY.png"><img src="assets/img/client logo/PMGSY.png" class="loggo img-fluid" alt=""></a></div>
-                  </div>
-                  <div class="aa col-lg-2 col-md-12 col-sm-12 icon-box" data-aos="zoom-in" data-aos-delay="200">
-                     <div class="swiper-slide"><a class="gallery-lightbox" href="assets/img/client logo/cvpp.png"><img src="assets/img/client logo/cvpp.png" class="loggo img-fluid" alt=""></a></div>
-                  </div>
-                  <div class="aa col-lg-2 col-md-12 col-sm-12 icon-box" data-aos="zoom-in" data-aos-delay="200">
-                     <div class="swiper-slide"><a class="gallery-lightbox" href="assets/img/client logo/JKERA.jpg"><img src="assets/img/client logo/JKERA.jpg" class="loggo img-fluid" alt=""></a></div>
-                  </div>
-               </div>
-            </div>
-         </section>
+                     <div class="icon"><i class="fas fa-heartbeat"></i></div>
+         <div class="swiper-slide"><a class="gallery-lightbox" href="assets/img/client logo/BRO.png"><img src="assets/img/client logo/BRO.png" class="loggo img-fluid" alt=""></a></div>
+         </div>
+         <div class="aa col-lg-2 col-md-12 col-sm-12 icon-box" data-aos="zoom-in" data-aos-delay="200">
+            <div class="swiper-slide"><a class="gallery-lightbox" href="assets/img/client logo/PWD.png"><img src="assets/img/client logo/PWD.png" class="loggo img-fluid" alt=""></a></div>
+         </div>
+         <div class="aa col-lg-2 col-md-12 col-sm-12 icon-box" data-aos="zoom-in" data-aos-delay="200">
+            <div class="swiper-slide"><a class="gallery-lightbox" href="assets/img/client logo/1519799094694.png"><img src="assets/img/client logo/1519799094694.png" class="loggo img-fluid" alt=""></a></div>
+         </div>
+         <div class="aa col-lg-2 col-md-12 col-sm-12 icon-box" data-aos="zoom-in" data-aos-delay="200">
+            <div class="swiper-slide"><a class="gallery-lightbox" href="assets/img/client logo/JKpcc.JPG"><img src="assets/img/client logo/JKpcc.JPG" class="loggo img-fluid" alt=""></a></div>
+         </div>
+         <div class="aa col-lg-2 col-md-12 col-sm-12 icon-box" data-aos="zoom-in" data-aos-delay="200">
+            <div class="swiper-slide"><a class="gallery-lightbox" href="assets/img/client logo/JKSPDC.png"><img src="assets/img/client logo/JKSPDC.png" class="loggo img-fluid" alt=""></a></div>
+         </div>
+         <div class="aa col-lg-2 col-md-12 col-sm-12 icon-box" data-aos="zoom-in" data-aos-delay="200">
+            <div class="swiper-slide"><a class="gallery-lightbox" href="assets/img/client logo/Konkan rail.png"><img src="assets/img/client logo/Konkan rail.png" class="loggo img-fluid" alt=""></a></div>
+         </div>
+         <div class="aa col-lg-2 col-md-12 col-sm-12 icon-box" data-aos="zoom-in" data-aos-delay="200">
+            <div class="swiper-slide"><a class="gallery-lightbox" href="assets/img/client logo/Morth.jpg"><img src="assets/img/client logo/Morth.jpg" class="loggo img-fluid" alt=""></a></div>
+         </div>
+         <div class="aa col-lg-2 col-md-12 col-sm-12 icon-box" data-aos="zoom-in" data-aos-delay="200">
+            <div class="swiper-slide"><a class="gallery-lightbox" href="assets/img/client logo/NHAI-Logo-PNG.png"><img src="assets/img/client logo/NHAI-Logo-PNG.png" class="loggo img-fluid" alt=""></a></div>
+         </div>
+         <div class="aa col-lg-2 col-md-12 col-sm-12 icon-box" data-aos="zoom-in" data-aos-delay="200">
+            <div class="swiper-slide"><a class="gallery-lightbox" href="assets/img/client logo/NHIDCL_19875.jpg"><img src="assets/img/client logo/NHIDCL_19875.jpg" class="loggo img-fluid" alt=""></a></div>
+         </div>
+         <div class="aa col-lg-2 col-md-12 col-sm-12 icon-box" data-aos="zoom-in" data-aos-delay="200">
+            <div class="swiper-slide"><a class="gallery-lightbox" href="assets/img/client logo/NHPC_Logo.png"><img src="assets/img/client logo/NHPC_Logo.png" class="loggo img-fluid" alt=""></a></div>
+         </div>
+         <div class="aa col-lg-2 col-md-12 col-sm-12 icon-box" data-aos="zoom-in" data-aos-delay="200">
+            <div class="swiper-slide"><a class="gallery-lightbox" href="assets/img/client logo/PMGSY.png"><img src="assets/img/client logo/PMGSY.png" class="loggo img-fluid" alt=""></a></div>
+         </div>
+         <div class="aa col-lg-2 col-md-12 col-sm-12 icon-box" data-aos="zoom-in" data-aos-delay="200">
+            <div class="swiper-slide"><a class="gallery-lightbox" href="assets/img/client logo/cvpp.png"><img src="assets/img/client logo/cvpp.png" class="loggo img-fluid" alt=""></a></div>
+         </div>
+         <div class="aa col-lg-2 col-md-12 col-sm-12 icon-box" data-aos="zoom-in" data-aos-delay="200">
+            <div class="swiper-slide"><a class="gallery-lightbox" href="assets/img/client logo/JKERA.jpg"><img src="assets/img/client logo/JKERA.jpg" class="loggo img-fluid" alt=""></a></div>
+         </div>
+         </div>
+         </div>
+         </section-->
          <!-- End Services Section -->
          <!-- ======= Counts Section ======= -->
          <section id="inno" class="inno">
