--- a/index.html
+++ b/index.html
@@ -627,7 +627,9 @@
                               <i class="bx bx-phone-call"></i>
                               <h3>Call Us</h3>
                               <br>
-                              <p>+91-9622210000</p>
+                              <p>For domestic projects: +91-9858232300<br>
+                                 For international projects and manpower services: +91-9622210000
+                              </p>
                            </div>
                         </div>
                      </div>
