--- a/index.html
+++ b/index.html
@@ -601,7 +601,7 @@
                            <div class="info-box mt-4">
                               <i class="bx bx-map"></i>
                               <h3>Registered Address</h3>
-                              <p>SGF INFRA PRIVATE LIMITED</p>
+                                                  <p><b>SGF INFRA PRIVATE LIMITED</b></p>
                               <p>F-961 Gurha Bakshi Nagar, Jammu (J&K) 180001</p>
                            </div>
                         </div>
