--- a/index.html
+++ b/index.html
@@ -194,8 +194,8 @@
                            </p>
                         </div>
                         <div class="tab-pane" id="tab-4">
-                           <h3>Construction</h3>
-                           <p class="jj"><img src="assets/img/what we do/construction-4-1226398.jpg" alt="" class="img-fluid">Starting traditionally as a bridge construction company, we have diversified over the years into other types of civil infrastructure works like roads, highways and buildings. We take pride in self-performing on our projects and have a state-of-the-art fabrication facility in Jammu, J&K.<br><br> We are now present in multiple states and have been associated with a large number of public clients. </p>
+                           <h3>Construction & Development</h3>
+                           <p class="jj"><img src="assets/img/what we do/construction-4-1226398.jpg" alt="" class="img-fluid">Starting traditionally as a bridge construction company, we have diversified over the years into other types of civil infrastructure works like roads, highways and buildings. We take pride in self-performing on our projects and have a state-of-the-art fabrication facility in Jammu, J&K.<br><br> We are now present in multiple states and have been associated with a large number of public clients. <br> Our Execution team consists of experienced engineers who have sound technical knowledge and are able to contribute effectively in the timely completion of projects. </p>
                            <br>
                            <p>Projects Executed:<br>
                               <i class="bi bi-check-circle"></i> Bridges<br>
@@ -382,6 +382,20 @@
                         <i class="bx bx-award"></i>
                         <span>250+</span><br>
                         <h4>Completed Projects</h4>
+                     </div>
+                  </div>
+                  <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch">
+                     <div class="count-box">
+                        <i class="bx bx-award"></i>
+                        <span>500+</span><br>
+                        <h4>Workmen</h4>
+                     </div>
+                  </div>
+                  <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch">
+                     <div class="count-box">
+                        <i class="bx bx-award"></i>
+                        <span>30+</span><br>
+                        <h4>Civil & Mechanical Engineers</h4>
                      </div>
                   </div>
                </div>
@@ -644,7 +658,7 @@
       <footer id="footer">
          <div class="container">
          <div class="copyright">
-            &copy; Copyright <strong><span>SGF Infra Private Limited 2022</span></strong>. All Rights Reserved
+            &copy; Copyright <strong><span>SGF Infra Private Limited 2024</span></strong>. All Rights Reserved
          </div>
       </footer>
       <!-- End Footer -->
