--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                         </div>
                         <div class="tab-pane" id="tab-4">
                            <h3>Construction & Development</h3>
-                           <p class="jj"><img src="assets/img/what we do/construction-4-1226398.jpg" alt="" class="img-fluid">Starting traditionally as a bridge construction company, we have diversified over the years into other types of civil infrastructure works like roads, highways and buildings. We take pride in self-performing on our projects and have a state-of-the-art fabrication facility in Jammu, J&K.<br><br> We are now present in multiple states and have been associated with a large number of public clients. <br> Our Execution team consists of experienced engineers who have sound technical knowledge and are able to contribute effectively in the timely completion of projects. </p>
+                           <p class="jj"><img src="assets/img/what we do/construction-4-1226398.jpg" alt="" class="img-fluid">Starting traditionally as a bridge construction company, we have diversified over the years into other types of civil infrastructure works like roads, highways and buildings. We take pride in self-performing on our projects and have a state-of-the-art fabrication facility in Jammu, J&K.<br><br> We are now present in multiple states and have been associated with a large number of public clients. Our Execution team consists of experienced engineers who have sound technical knowledge and are able to contribute effectively in the timely completion of projects. </p>
                            <br>
                            <p>Projects Executed:<br>
                               <i class="bi bi-check-circle"></i> Bridges<br>
