--- a/index.html
+++ b/index.html
@@ -372,9 +372,9 @@
                   </div>
                   <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch">
                      <div class="count-box">
-                        <i class="icon-generator"></i>
-                        <span>100+</span><br>
-                        <h3>Power Equipment</h3>
+                        <i class="bx bx-hard-hat"></i>
+                        <span>30+</span><br>
+                        <h3>Civil & Mechanical Engineers</h3>
                      </div>
                   </div>
                   <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch">
