--- a/index.html
+++ b/index.html
@@ -390,8 +390,11 @@
          </section>
          <!-- End Counts Section -->
          <!-- ======= logo new Section ======= -->
-         <section id="counts" class="counts">
+         <section id="services" class="services services">
             <div class="container" data-aos="fade-up">
+               <div class="section-title">
+                  <h2>Clients</h2>
+               </div>
                <div class="row no-gutters">
                   <div class="col-lg-2 col-md-6 d-md-flex align-items-md-stretch">
                      <div class="count-boxi">
