--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                </div>
                </div-->
             <!-- Slide 2 -->
-            <div class="carousel-item" style="background-image: url(assets/img/bg.png)">
+            <div class="carousel-item" style="background-image: url(assets/img/bg.jpg)">
                <div class="container">
                   <h2>Building Infrastructure for Better Tomorrow</h2>
                   <!--p>Ut velit est quam dolor ad a aliquid qui aliquid. Sequi ea ut et est quaerat sequi nihil ut aliquam. Occaecati alias dolorem mollitia ut. Similique ea voluptatem. Esse doloremque accusamus repellendus deleniti vel.</p>
