--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
                      <div class="swiper-slide">
                         <div class="testimonial-item">
                            <div class="swiper-slide"><a class="gallery-lightbox" href="assets/img/projects/choglamsar.jpeg"><img src="assets/img/projects/choglamsar.jpeg" class="sldie img-fluid" alt=""></a></div>
-                           <p class="jj">Design,     Fabrication     ,     Launching     and Commissioning  of  Construction  of  60  Mtr Span  Double  Lane  steel   grider  Motorable Bridge with RCC decking over Indus river at Choglamsar.</p>
+                           <p class="jj">Design, Fabrication, Launching  and Commissioning of 60 Mtr Span  Double  Lane  steel   grider  Motorable Bridge with RCC decking over Indus river at Choglamsar.</p>
                         </div>
                      </div>
                      <!-- End testimonial item -->
@@ -328,6 +328,18 @@
                         <div class="testimonial-item">
                            <div class="swiper-slide"><a class="gallery-lightbox" href="assets/img/projects/thang nubra.JPG"><img src="assets/img/projects/thang nubra.JPG" class="sldie img-fluid" alt=""></a></div>
                            <p class="jj">Design & Construction of 80 Mtrs. span single lane steel truss Motorable Bridge over River Shayok at Thang Nobra</p>
+                        </div>
+                     </div>
+                     <div class="swiper-slide">
+                        <div class="testimonial-item">
+                           <div class="swiper-slide"><a class="gallery-lightbox" href="assets/img/projects/coca_cola.jpg"><img src="assets/img/projects/coca_cola.jpg" class="sldie img-fluid" alt=""></a></div>
+                           <p class="jj">Design, Fabrication and Erection of PEB including all civil works for Cocal Cola at Bari Barahmana Jammu</p>
+                        </div>
+                     </div>
+                     <div class="swiper-slide">
+                        <div class="testimonial-item">
+                           <div class="swiper-slide"><a class="gallery-lightbox" href="assets/img/projects/hicent.jpg"><img src="assets/img/projects/hicent.jpg" class="sldie img-fluid" alt=""></a></div>
+                           <p class="jj">Construction of shed for all civil works for Highcent Infra at Birpur Jammu</p>
                         </div>
                      </div>
                      <!-- End testimonial item -->
