--- a/index.html
+++ b/index.html
@@ -272,6 +272,12 @@
                            <p class="jj">Design and Construction  of 135 m  long steel bridge of Class A Loading over River Chenab at Dhamkund, Ramban</p>
                         </div>
                      </div>
+                     <div class="swiper-slide">
+                        <div class="testimonial-item">
+                           <div class="swiper-slide"><a class="gallery-lightbox" href="assets/img/projects/coca_cola.jpg"><img src="assets/img/projects/coca_cola.jpg" class="sldie img-fluid" alt=""></a></div>
+                           <p class="jj">Design, Fabrication and Erection of Pre Engineered Building including all civil works for Cocal Cola at Bari Barahmana Jammu</p>
+                        </div>
+                     </div>
                      <!-- End testimonial item -->
                      <div class="swiper-slide">
                         <div class="testimonial-item">
@@ -330,12 +336,7 @@
                            <p class="jj">Design & Construction of 80 Mtrs. span single lane steel truss Motorable Bridge over River Shayok at Thang Nobra</p>
                         </div>
                      </div>
-                     <div class="swiper-slide">
-                        <div class="testimonial-item">
-                           <div class="swiper-slide"><a class="gallery-lightbox" href="assets/img/projects/coca_cola.jpg"><img src="assets/img/projects/coca_cola.jpg" class="sldie img-fluid" alt=""></a></div>
-                           <p class="jj">Design, Fabrication and Erection of PEB including all civil works for Cocal Cola at Bari Barahmana Jammu</p>
-                        </div>
-                     </div>
+                     
                      <div class="swiper-slide">
                         <div class="testimonial-item">
                            <div class="swiper-slide"><a class="gallery-lightbox" href="assets/img/projects/hicent.jpg"><img src="assets/img/projects/hicent.jpg" class="sldie img-fluid" alt=""></a></div>
