--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
                      <div class="count-box">
                         <i class="bx bx-hard-hat"></i>
                         <span>30+</span><br>
-                        <h3>Civil & Mechanical Engineers</h3>
+                        <h3>Civil, Electrical & Mechanical Engineers</h3>
                      </div>
                   </div>
                   <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch">
@@ -497,6 +497,20 @@
                      <div class="count-boxi">
                         <div class="icon-box" data-aos="zoom-in" data-aos-delay="200">
                            <img src="assets/img/client logo/Morth.jpg" class="img-fluid" alt="">
+                        </div>
+                     </div>
+                  </div>
+                  <div class="col-lg-2 col-md-6 d-md-flex align-items-md-stretch">
+                     <div class="count-boxi">
+                        <div class="icon-box" data-aos="zoom-in" data-aos-delay="200">
+                           <img src="assets/img/client logo/jjm.jpg" class="img-fluid" alt="">
+                        </div>
+                     </div>
+                  </div>
+                  <div class="col-lg-2 col-md-6 d-md-flex align-items-md-stretch">
+                     <div class="count-boxi">
+                        <div class="icon-box" data-aos="zoom-in" data-aos-delay="200">
+                           <img src="assets/img/client logo/jscl.jpg" class="img-fluid" alt="">
                         </div>
                      </div>
                   </div>
