--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
                      <div class="swiper-slide">
                         <div class="testimonial-item">
                            <div class="swiper-slide"><a class="gallery-lightbox" href="assets/img/projects/coca_cola.jpg"><img src="assets/img/projects/coca_cola.jpg" class="sldie img-fluid" alt=""></a></div>
-                           <p class="jj">Design, Fabrication and Erection of Pre Engineered Building including all civil works for Cocal Cola at Bari Barahmana Jammu</p>
+                           <p class="jj">Design, Fabrication and Erection of Pre Engineered Building including all civil works for Coca Cola at Bari Barahmana Jammu</p>
                         </div>
                      </div>
                      <!-- End testimonial item -->
